# dnsaur

./: CHANGELOG.md  Cargo.toml  README.md  mise.toml
.github/workflows/: release.yml
src/: addr.rs  errors.rs  iter.rs  lib.rs  parser.rs  readme.rs
src/lookup/: udp.rs
src/lookups/: mod.rs  tcp.rs  udp.rs
src/resolvers/: hosts.rs  mod.rs  resolv.rs
tools/: license.rs
