[package]
name = "dnsaur"
version = "0.1.0-alpha.0"
edition = "2021"
description = "An asynchronous DNS stub resolver"
license = "MPL-2.0"
categories = ["network-programming", "asynchronous"]
keywords = ["dns", "dns-resolver", "dns-lookup"]
repository = "https://github.com/mselee/dnsaur"
authors = ["Mohamed Seleem <oss@mselee.com>"]
include = ["**/*.rs", "LICENSE", "Cargo.toml", "README.md"]
rust-version = "1.77.2"

# we use `example` rather than `bin` because it allows usage of dev-depdendencies
[[example]]
name = "license"
path = "tools/license.rs"

[features]
default = []
global = ["dep:local-sync"]

[dependencies]
bstr = { version = "1.11.1" }
bytes = "1.9.0"
domain = { version = "0.10.3", default-features = false, features = ["std"] }
fastrand = "2.3.0"
memchr = "2.7.4"
monoio = { version = "0.2.4", default-features = false, features = [
    "bytes",
    "macros",
    "async-cancel",
] }
snafu = { version = "0.8.5", default-features = false, features = ["std"] }
local-sync = { version = "0.1.1", optional = true }

[patch.crates-io]
local-sync = { git = "https://github.com/mselee/local-sync", rev = "0d3f7393bcbc5b64f2299e66444f778e3cac457c", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[dev-dependencies]
file-header = { version = "0.1.3", default-features = false, features = [
    "spdx",
] }
globset = { version = "0.4.15", default-features = false }
